--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,9 @@ dependencies {
     //Hdodenhof round images
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-
+    //Kotlin
+    implementation 'androidx.activity:activity-ktx:1.7.1'
+    implementation 'androidx.core:core-ktx:1.10.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
