--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         tools:targetApi="31">
         <activity
             android:name=".view.activities.ResultScreenActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".view.activities.TypeScreenActivity"
@@ -31,6 +32,7 @@
         </activity>
         <activity
             android:name=".view.activities.MainActivity"
+            android:screenOrientation="portrait"
             android:exported="false"></activity>
     </application>
 
